<resources>
    <string name="app_name">PodcastApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="channel_name">Podcast Player</string>
    <string name="channel_desc">The Podcast Player App</string>
    <string name="label_toolbar_title">Toolbar Title</string>
    <string name="placeholder_title">Placeholder Title</string>
    <string name="placeholder_no_network">No Network Placeholder Message</string>
    <string name="label_retry">retry btn</string>
    <string name="desc_no_connection_image">No network connection image.</string>
    <string name="desc_podcast_image">podcast image</string>
    <string name="placeholder_time">00:00:00</string>
    <string name="desc_rewind_button">rewind 15 seconds button</string>
    <string name="desc_play_button">play button</string>
    <string name="desc_pause_button">pause button</string>
    <string name="desc_fast_forward_button">fast forward 15 seconds button</string>
    <string name="label_item_date">MM DD</string>
    <string name="label_item_year">YYYY</string>
    <string name="placeholder_remove_all_downloads">Temporary Remove All Downloads</string>

</resources>